Fixed tests after URL Encoding